// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gallery components Render with success 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
      >
        <div
          class="sc-gKsewC upNYM"
        >
          <div
            class="sc-pFZIQ dDKEuW"
          >
            <div
              class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
              role="progressbar"
              style="width: 40px; height: 40px;"
            >
              <svg
                class="MuiCircularProgress-svg"
                viewBox="22 22 44 44"
              >
                <circle
                  class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
                  cx="44"
                  cy="44"
                  fill="none"
                  r="20.2"
                  stroke-width="3.6"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root sc-bdfBwQ bAhLkp MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-4 MuiGrid-grid-md-3 MuiGrid-grid-lg-2"
        >
          <div
            class="MuiPaper-root MuiCard-root sc-gsTCUz hKHMaT MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              data-testid="btnViewDetails"
            >
              <div
                class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
                role="progressbar"
                style="width: 40px; height: 40px;"
              >
                <svg
                  class="MuiCircularProgress-svg"
                  viewBox="22 22 44 44"
                >
                  <circle
                    class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
                    cx="44"
                    cy="44"
                    fill="none"
                    r="20.2"
                    stroke-width="3.6"
                  />
                </svg>
              </div>
              <div
                class="MuiCardContent-root sc-hKgILt fGYCfb"
              >
                <h5
                  class="MuiTypography-root sc-eCssSg cyHuDu MuiTypography-h5"
                >
                  bulbasaur
                </h5>
                <h6
                  class="MuiTypography-root sc-jSgupP hsPGzo MuiTypography-subtitle1"
                >
                  R$ 64.00
                </h6>
                <div
                  class="MuiBox-root MuiBox-root-1 sc-jrAGrp iEAjkg"
                >
                  <div
                    class="MuiChip-root sc-kEjbxe blutHt MuiChip-outlined"
                    colapse="1"
                  >
                    <div
                      class="MuiAvatar-root MuiAvatar-circle sc-iqHYGH eevEyr MuiChip-avatar"
                      color="#78c851"
                      title="grass"
                    >
                      <img
                        alt="grass"
                        class="MuiAvatar-img"
                        src="grass.svg"
                      />
                    </div>
                    <span
                      class="MuiChip-label"
                    />
                  </div>
                  <div
                    class="MuiChip-root sc-kEjbxe blutHt MuiChip-outlined"
                    colapse="1"
                  >
                    <div
                      class="MuiAvatar-root MuiAvatar-circle sc-iqHYGH igKQxi MuiChip-avatar"
                      color="#a04aa0"
                      title="poison"
                    >
                      <img
                        alt="poison"
                        class="MuiAvatar-img"
                        src="poison.svg"
                      />
                    </div>
                    <span
                      class="MuiChip-label"
                    />
                  </div>
                </div>
              </div>
            </div>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-textSizeSmall MuiButton-sizeSmall MuiButton-fullWidth"
              data-testid="btnAddCart"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Comprar
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <div
          align="center"
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained sc-iBPRYJ laByNs MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge"
            data-testid="btnLoadMore"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Carregar mais
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
    >
      <div
        class="sc-gKsewC upNYM"
      >
        <div
          class="sc-pFZIQ dDKEuW"
        >
          <div
            class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
            role="progressbar"
            style="width: 40px; height: 40px;"
          >
            <svg
              class="MuiCircularProgress-svg"
              viewBox="22 22 44 44"
            >
              <circle
                class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
                cx="44"
                cy="44"
                fill="none"
                r="20.2"
                stroke-width="3.6"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root sc-bdfBwQ bAhLkp MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-4 MuiGrid-grid-md-3 MuiGrid-grid-lg-2"
      >
        <div
          class="MuiPaper-root MuiCard-root sc-gsTCUz hKHMaT MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            data-testid="btnViewDetails"
          >
            <div
              class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
              role="progressbar"
              style="width: 40px; height: 40px;"
            >
              <svg
                class="MuiCircularProgress-svg"
                viewBox="22 22 44 44"
              >
                <circle
                  class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
                  cx="44"
                  cy="44"
                  fill="none"
                  r="20.2"
                  stroke-width="3.6"
                />
              </svg>
            </div>
            <div
              class="MuiCardContent-root sc-hKgILt fGYCfb"
            >
              <h5
                class="MuiTypography-root sc-eCssSg cyHuDu MuiTypography-h5"
              >
                bulbasaur
              </h5>
              <h6
                class="MuiTypography-root sc-jSgupP hsPGzo MuiTypography-subtitle1"
              >
                R$ 64.00
              </h6>
              <div
                class="MuiBox-root MuiBox-root-1 sc-jrAGrp iEAjkg"
              >
                <div
                  class="MuiChip-root sc-kEjbxe blutHt MuiChip-outlined"
                  colapse="1"
                >
                  <div
                    class="MuiAvatar-root MuiAvatar-circle sc-iqHYGH eevEyr MuiChip-avatar"
                    color="#78c851"
                    title="grass"
                  >
                    <img
                      alt="grass"
                      class="MuiAvatar-img"
                      src="grass.svg"
                    />
                  </div>
                  <span
                    class="MuiChip-label"
                  />
                </div>
                <div
                  class="MuiChip-root sc-kEjbxe blutHt MuiChip-outlined"
                  colapse="1"
                >
                  <div
                    class="MuiAvatar-root MuiAvatar-circle sc-iqHYGH igKQxi MuiChip-avatar"
                    color="#a04aa0"
                    title="poison"
                  >
                    <img
                      alt="poison"
                      class="MuiAvatar-img"
                      src="poison.svg"
                    />
                  </div>
                  <span
                    class="MuiChip-label"
                  />
                </div>
              </div>
            </div>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-textSizeSmall MuiButton-sizeSmall MuiButton-fullWidth"
            data-testid="btnAddCart"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Comprar
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <div
        align="center"
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained sc-iBPRYJ laByNs MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge"
          data-testid="btnLoadMore"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Carregar mais
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Gallery components Render without pokemon 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
      >
        <div
          class="sc-gKsewC upNYM"
        >
          <div
            class="sc-pFZIQ dDKEuW"
          >
            <div
              class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
              role="progressbar"
              style="width: 40px; height: 40px;"
            >
              <svg
                class="MuiCircularProgress-svg"
                viewBox="22 22 44 44"
              >
                <circle
                  class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
                  cx="44"
                  cy="44"
                  fill="none"
                  r="20.2"
                  stroke-width="3.6"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
    >
      <div
        class="sc-gKsewC upNYM"
      >
        <div
          class="sc-pFZIQ dDKEuW"
        >
          <div
            class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
            role="progressbar"
            style="width: 40px; height: 40px;"
          >
            <svg
              class="MuiCircularProgress-svg"
              viewBox="22 22 44 44"
            >
              <circle
                class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
                cx="44"
                cy="44"
                fill="none"
                r="20.2"
                stroke-width="3.6"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
